@@ -1,11 +1,11 @@
-(defproject puppetlabs/jruby-utils "5.0.1-SNAPSHOT"
+(defproject puppetlabs/jruby-utils "5.1.0-SNAPSHOT"
   :description "A library for working with JRuby"
   :url "https://github.com/puppetlabs/jruby-utils"
   :license {:name "Apache License, Version 2.0"
             :url "http://www.apache.org/licenses/LICENSE-2.0"}
 
   :min-lein-version "2.9.1"
-  :parent-project {:coords [puppetlabs/clj-parent "4.10.1"]
+  :parent-project {:coords [puppetlabs/clj-parent "7.2.3"]
                    :inherit [:managed-dependencies]}
 
   :pedantic? :abort
@@ -22,7 +22,7 @@
                  [prismatic/schema]
                  [slingshot]
 
-                 [puppetlabs/jruby-deps "9.4.2.0-1"]
+                 [puppetlabs/jruby-deps "9.4.3.0-1"]
 
                  [puppetlabs/i18n]
                  [puppetlabs/kitchensink]
@@ -42,11 +42,18 @@
 
   :profiles {:dev {:dependencies  [[puppetlabs/kitchensink :classifier "test" :scope "test"]
                                    [puppetlabs/trapperkeeper :classifier "test" :scope "test"]
-                                   [org.bouncycastle/bcpkix-jdk15on]
+                                   [org.bouncycastle/bcpkix-jdk18on]
                                    [org.tcrawley/dynapath]]
-                   :jvm-opts ["-Djruby.logger.class=com.puppetlabs.jruby_utils.jruby.Slf4jLogger"
-                              "-Xms1G"
-                              "-Xmx2G"]}
+                   :jvm-opts ~(let [version (System/getProperty "java.specification.version")
+                                    [major minor _] (clojure.string/split version #"\.")]
+                                (concat
+                                  ["-Djruby.logger.class=com.puppetlabs.jruby_utils.jruby.Slf4jLogger"
+                                   "-XX:+UseG1GC"
+                                   "-Xms1G"
+                                   "-Xmx2G"]
+                                  (if (= 17 (java.lang.Integer/parseInt major))
+                                    ["--add-opens" "java.base/sun.nio.ch=ALL-UNNAMED" "--add-opens" "java.base/java.io=ALL-UNNAMED"]
+                                    [])))}
              :testutils {:source-paths ^:replace ["test/unit" "test/integration"]}}
 
   :plugins [[lein-parent "0.3.7"]
